src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Brand Integrity Reviewed</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed %E2%80%93 Violation</fullName>
        </values>
        <values>
            <fullName>Closed %E2%80%93 Withdrawn</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Final Review</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Leadership Reviewed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Pending %E2%80%93 Escalated</fullName>
        </values>
        <values>
            <fullName>Review Accept</fullName>
        </values>
        <values>
            <fullName>Review Reject</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Approved_by__c</fullName>
        <label>Approved by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSR (less than $40)</fullName>
                </value>
                <value>
                    <fullName>Senior CSR (up to $300)</fullName>
                </value>
                <value>
                    <fullName>Supervisor/team lead</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachment_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Master Card</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>PayPal / Apple Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Reject_Reason__c</fullName>
        <description>This field is used to give the reason for rejecting a case</description>
        <label>Case Reject Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MAP (Also See Sub Type)</fullName>
                </value>
                <value>
                    <fullName>SEM (Also See Sub Type)</fullName>
                </value>
                <value>
                    <fullName>Off-brand/General Advertising</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Domain misuse</fullName>
                </value>
                <value>
                    <fullName>3P</fullName>
                </value>
                <value>
                    <fullName>Internet policy</fullName>
                </value>
                <value>
                    <fullName>Diversion</fullName>
                </value>
                <value>
                    <fullName>International Selling</fullName>
                </value>
                <value>
                    <fullName>Counterfeit</fullName>
                </value>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>IP Infringement</fullName>
                </value>
                <value>
                    <fullName>Online Selling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commitment_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commitment Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consumer_group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consumer group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_City__c</fullName>
        <formula>Contact.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_State__c</fullName>
        <formula>Contact.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Street__c</fullName>
        <formula>Contact.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Zip__c</fullName>
        <formula>Contact.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Doc_Number_s__c</fullName>
        <label>Delivery Doc Number(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount_applies_to_total_order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount applies to total order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_if_applicable_Dollar__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is for employee referral</description>
        <label>$ Discount (if applicable)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_if_applicable__c</fullName>
        <defaultValue>0</defaultValue>
        <label>% Discount (if applicable)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_on_product__c</fullName>
        <label>Discount $ on product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>File_Format__c</fullName>
        <label>File Format</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Freight Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Discount_Given_if_applicable__c</fullName>
        <description>This field is for employee referral cases</description>
        <label>Freight Discount Given (if applicable)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freight Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freight_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Freight Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Card_Number_Promotion_Code__c</fullName>
        <label>Gift Card Number / Promotion Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Contact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Contact1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for internal sales rep and managers</description>
        <label>Internal Contact2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Contact3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for internal sales rep and managers</description>
        <label>Internal Contact3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Manager2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Manager2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_1__c</fullName>
        <label>Item 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_2__c</fullName>
        <label>Item 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_3__c</fullName>
        <label>Item 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Items_applied_to_discount__c</fullName>
        <label># of items applied to discount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchandise_Tax__c</fullName>
        <label>Merchandise Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Needs_to_be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs to be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Cartons__c</fullName>
        <label>Number of Cartons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Created_By__c</fullName>
        <label>Order Created By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number_s__c</fullName>
        <label>Order Number(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Packing List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Point_of_Sale__c</fullName>
        <label>Point of Sale</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Case_Reject_reason__c</fullName>
        <description>This is for storing the field value of previous reject reason for case</description>
        <label>Previous Case Reject reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <label>Price List</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Cost__c</fullName>
        <label>Product Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Discount Provided</fullName>
                </value>
                <value>
                    <fullName>Priority 1 Shipping</fullName>
                </value>
                <value>
                    <fullName>Expedited Shipping</fullName>
                </value>
                <value>
                    <fullName>Free Shipping</fullName>
                </value>
                <value>
                    <fullName>Free Return Label</fullName>
                </value>
                <value>
                    <fullName>$10 Off Order</fullName>
                </value>
                <value>
                    <fullName>$25 Off Order</fullName>
                </value>
                <value>
                    <fullName>$50 Off Order</fullName>
                </value>
                <value>
                    <fullName>5% Off Order</fullName>
                </value>
                <value>
                    <fullName>10% Off Order</fullName>
                </value>
                <value>
                    <fullName>15% Off Order</fullName>
                </value>
                <value>
                    <fullName>20% Off Order</fullName>
                </value>
                <value>
                    <fullName>25% Off Order</fullName>
                </value>
                <value>
                    <fullName>40% Off Order</fullName>
                </value>
                <value>
                    <fullName>50% Off Order</fullName>
                </value>
                <value>
                    <fullName>Associate Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Reason__c</fullName>
        <label>Referral Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shipping &amp; Handling Charge</fullName>
                </value>
                <value>
                    <fullName>Military/First Responder Discount</fullName>
                </value>
                <value>
                    <fullName>Promotive/Expert Voice</fullName>
                </value>
                <value>
                    <fullName>Carhartt Bucks</fullName>
                </value>
                <value>
                    <fullName>Courtesy Discount</fullName>
                </value>
                <value>
                    <fullName>Gift Card</fullName>
                </value>
                <value>
                    <fullName>Shortage/Plant Error</fullName>
                </value>
                <value>
                    <fullName>Lost Order/Damaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Explanation__c</fullName>
        <label>Refund Explanation</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Results_of_Investigation__c</fullName>
        <label>Results of Investigation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retailer_group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retailer group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_Authorization_Number__c</fullName>
        <label>Return Authorization Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account__c</fullName>
        <formula>Account.SAP_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Account #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Order__c</fullName>
        <label>SAP Order#</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Manager1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to assign Sales Manager.</description>
        <label>Sales Manager1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Manager2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to assign Sales manager2</description>
        <label>Sales Manager2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>Winter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sent_From__c</fullName>
        <label>Sent From</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Group__c</fullName>
        <label>Service Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Special Services</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>ASI</fullName>
                </value>
                <value>
                    <fullName>Inside</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <label>Ship To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Single_Item_Credit__c</fullName>
        <description>This field is for Employee referral cases</description>
        <label>Single Item Credit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Spam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Type_1__c</fullName>
        <label>Sub-Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Promotions</fullName>
                </value>
                <value>
                    <fullName>Discounts</fullName>
                </value>
                <value>
                    <fullName>Password reset</fullName>
                </value>
                <value>
                    <fullName>Website Error</fullName>
                </value>
                <value>
                    <fullName>Career Opportunities</fullName>
                </value>
                <value>
                    <fullName>Find a retailer</fullName>
                </value>
                <value>
                    <fullName>Catalogs</fullName>
                </value>
                <value>
                    <fullName>Unsubscribe</fullName>
                </value>
                <value>
                    <fullName>Notify me</fullName>
                </value>
                <value>
                    <fullName>Gift cards</fullName>
                </value>
                <value>
                    <fullName>True Fit</fullName>
                </value>
                <value>
                    <fullName>Ground Breakers</fullName>
                </value>
                <value>
                    <fullName>Experticity</fullName>
                </value>
                <value>
                    <fullName>Social media</fullName>
                </value>
                <value>
                    <fullName>Sponsorships</fullName>
                </value>
                <value>
                    <fullName>Donations</fullName>
                </value>
                <value>
                    <fullName>Retail promotions</fullName>
                </value>
                <value>
                    <fullName>Become a retailer</fullName>
                </value>
                <value>
                    <fullName>Carhartt Owned  Stores</fullName>
                </value>
                <value>
                    <fullName>B2B List</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s</fullName>
                </value>
                <value>
                    <fullName>Pet Gear</fullName>
                </value>
                <value>
                    <fullName>Transfer to Licensee</fullName>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Courtesy Exchange</fullName>
                </value>
                <value>
                    <fullName>Take an Order</fullName>
                </value>
                <value>
                    <fullName>Order Questions</fullName>
                </value>
                <value>
                    <fullName>Web Order Return</fullName>
                </value>
                <value>
                    <fullName>Plant Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type_2__c</fullName>
        <label>Sub-Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Type_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect image</fullName>
                </value>
                <value>
                    <fullName>Incorrect Info</fullName>
                </value>
                <value>
                    <fullName>Store in our locator</fullName>
                </value>
                <value>
                    <fullName>Add Store to Locator</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
                <value>
                    <fullName>Pinterest</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Helmets To Hardhats</fullName>
                </value>
                <value>
                    <fullName>FFA</fullName>
                </value>
                <value>
                    <fullName>B.A.S.S</fullName>
                </value>
                <value>
                    <fullName>Skills USA</fullName>
                </value>
                <value>
                    <fullName>Union Alliance</fullName>
                </value>
                <value>
                    <fullName>Submit A Request</fullName>
                </value>
                <value>
                    <fullName>Save The Sale</fullName>
                </value>
                <value>
                    <fullName>Returns</fullName>
                </value>
                <value>
                    <fullName>Gift Cards</fullName>
                </value>
                <value>
                    <fullName>Store Issues</fullName>
                </value>
                <value>
                    <fullName>Product comparison</fullName>
                </value>
                <value>
                    <fullName>Lining</fullName>
                </value>
                <value>
                    <fullName>Sizing</fullName>
                </value>
                <value>
                    <fullName>Product suggestion</fullName>
                </value>
                <value>
                    <fullName>Made in the USA</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Out Of Stock</fullName>
                </value>
                <value>
                    <fullName>Zippers</fullName>
                </value>
                <value>
                    <fullName>Material</fullName>
                </value>
                <value>
                    <fullName>Non licensee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type_3__c</fullName>
        <label>Sub-Type 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Type_2__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boots</fullName>
                </value>
                <value>
                    <fullName>Gloves</fullName>
                </value>
                <value>
                    <fullName>Wallets / Belts</fullName>
                </value>
                <value>
                    <fullName>Socks</fullName>
                </value>
                <value>
                    <fullName>Safety Glasses</fullName>
                </value>
                <value>
                    <fullName>Kids</fullName>
                </value>
                <value>
                    <fullName>Bags</fullName>
                </value>
                <value>
                    <fullName>Seatcovers/Covercraft</fullName>
                </value>
                <value>
                    <fullName>Scrubs</fullName>
                </value>
                <value>
                    <fullName>Backpocket</fullName>
                </value>
                <value>
                    <fullName>Crotch</fullName>
                </value>
                <value>
                    <fullName>Cuffs</fullName>
                </value>
                <value>
                    <fullName>Seams</fullName>
                </value>
                <value>
                    <fullName>Waterproofing</fullName>
                </value>
                <value>
                    <fullName>Shrinkage</fullName>
                </value>
                <value>
                    <fullName>Sizing</fullName>
                </value>
                <value>
                    <fullName>Hardware non zipper</fullName>
                </value>
                <value>
                    <fullName>Sticker residue</fullName>
                </value>
                <value>
                    <fullName>Belt Loops</fullName>
                </value>
                <value>
                    <fullName>Color defect</fullName>
                </value>
                <value>
                    <fullName>Resubmit Label</fullName>
                </value>
                <value>
                    <fullName>Did not receive shipping confirm.</fullName>
                </value>
                <value>
                    <fullName>Wrong Size / Color / Qty</fullName>
                </value>
                <value>
                    <fullName>Credit Issued</fullName>
                </value>
                <value>
                    <fullName>Credit Not Issued</fullName>
                </value>
                <value>
                    <fullName>D2C Referral</fullName>
                </value>
                <value>
                    <fullName>Zippers</fullName>
                </value>
                <value>
                    <fullName>Snaps</fullName>
                </value>
                <value>
                    <fullName>Buttons</fullName>
                </value>
                <value>
                    <fullName>Suspender Clips</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype21__c</fullName>
        <label>Subtype21</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TYPE2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Password Reset/Account</fullName>
                </value>
                <value>
                    <fullName>Chrome</fullName>
                </value>
                <value>
                    <fullName>Firefox</fullName>
                </value>
                <value>
                    <fullName>Internet Explorer / MS Edge</fullName>
                </value>
                <value>
                    <fullName>Other Browser</fullName>
                </value>
                <value>
                    <fullName>Safari</fullName>
                </value>
                <value>
                    <fullName>Explain Return Policy</fullName>
                </value>
                <value>
                    <fullName>Issue label/Resubmit label</fullName>
                </value>
                <value>
                    <fullName>Refund Inquiry</fullName>
                </value>
                <value>
                    <fullName>Career Opportunities</fullName>
                </value>
                <value>
                    <fullName>Company General Inquiry</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>International Non-EMEA</fullName>
                </value>
                <value>
                    <fullName>Marketing/Social Media</fullName>
                </value>
                <value>
                    <fullName>WIP</fullName>
                </value>
                <value>
                    <fullName>Carhartt.com Promo</fullName>
                </value>
                <value>
                    <fullName>Donations and Sponsorships</fullName>
                </value>
                <value>
                    <fullName>Experticity</fullName>
                </value>
                <value>
                    <fullName>Military/Partner Discounts</fullName>
                </value>
                <value>
                    <fullName>Retail Promo</fullName>
                </value>
                <value>
                    <fullName>Skills USA</fullName>
                </value>
                <value>
                    <fullName>B2B List / Price Quote</fullName>
                </value>
                <value>
                    <fullName>Merchology</fullName>
                </value>
                <value>
                    <fullName>Prospect/Become a Retailer</fullName>
                </value>
                <value>
                    <fullName>Created RA</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Inquiry/Issue</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Fabric Swatch</fullName>
                </value>
                <value>
                    <fullName>Hardware (non-zipper)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>